// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Keystore.ts getJWKS should return external jwks 1`] = `
[
  {
    "alg": "ES512",
    "allowed_from": 1578790800,
    "created_at": 1578790800,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "expires_at": 1640995200,
    "key_ops": [
      "verify",
    ],
    "kid": "publicKeyExpires",
    "kty": "EC",
    "n": "n",
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "RS512",
    "allowed_from": 1578618000,
    "created_at": 1578618000,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "key_ops": [
      "decrypt",
      "verify",
    ],
    "kid": "publicKeyRSA",
    "kty": "RSA",
    "n": "n",
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "ES256",
    "allowed_from": 1578531600,
    "created_at": 1578531600,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "key_ops": [
      "verify",
    ],
    "kid": "publicKeyExternal",
    "kty": "EC",
    "n": "n",
    "origin": "https://public.origin.uri/",
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "ES512",
    "allowed_from": 1578445200,
    "created_at": 1578445200,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "key_ops": [
      "verify",
    ],
    "kid": "publicKey",
    "kty": "EC",
    "n": "n",
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "ES512",
    "allowed_from": 1578272400,
    "created_at": 1578272400,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "expires_at": 1640995200,
    "key_ops": [
      "verify",
    ],
    "kid": "privateKeyExpires",
    "kty": "EC",
    "n": "n",
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "RS512",
    "allowed_from": 1578099600,
    "created_at": 1578099600,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "key_ops": [
      "decrypt",
      "verify",
    ],
    "kid": "privateKeyRSA",
    "kty": "RSA",
    "n": "n",
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "ES384",
    "allowed_from": 1578013200,
    "created_at": 1578013200,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "key_ops": [
      "verify",
    ],
    "kid": "privateKeyExternal",
    "kty": "EC",
    "n": "n",
    "origin": "https://private.origin.uri/",
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "ES512",
    "allowed_from": 1577926800,
    "created_at": 1577926800,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "key_ops": [
      "verify",
    ],
    "kid": "privateKey",
    "kty": "EC",
    "n": "n",
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
]
`;

exports[`Keystore.ts getJWKS should return private keys 1`] = `
[
  {
    "alg": "ES512",
    "allowed_from": 1578790800,
    "created_at": 1578790800,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "expires_at": 1640995200,
    "key_ops": [
      "verify",
    ],
    "kid": "publicKeyExpires",
    "kty": "EC",
    "n": "n",
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "RS512",
    "allowed_from": 1578618000,
    "created_at": 1578618000,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "key_ops": [
      "decrypt",
      "verify",
    ],
    "kid": "publicKeyRSA",
    "kty": "RSA",
    "n": "n",
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "ES512",
    "allowed_from": 1578445200,
    "created_at": 1578445200,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "key_ops": [
      "verify",
    ],
    "kid": "publicKey",
    "kty": "EC",
    "n": "n",
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "ES512",
    "allowed_from": 1578272400,
    "created_at": 1578272400,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "expires_at": 1640995200,
    "key_ops": [
      "sign",
      "verify",
    ],
    "kid": "privateKeyExpires",
    "kty": "EC",
    "n": "n",
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "RS512",
    "allowed_from": 1578099600,
    "created_at": 1578099600,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "key_ops": [
      "decrypt",
      "encrypt",
      "sign",
      "verify",
    ],
    "kid": "privateKeyRSA",
    "kty": "RSA",
    "n": "n",
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "ES512",
    "allowed_from": 1577926800,
    "created_at": 1577926800,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "key_ops": [
      "sign",
      "verify",
    ],
    "kid": "privateKey",
    "kty": "EC",
    "n": "n",
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
]
`;

exports[`Keystore.ts getJWKS should return public jwks 1`] = `
[
  {
    "alg": "ES512",
    "allowed_from": 1578790800,
    "created_at": 1578790800,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "expires_at": 1640995200,
    "key_ops": [
      "verify",
    ],
    "kid": "publicKeyExpires",
    "kty": "EC",
    "n": "n",
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "RS512",
    "allowed_from": 1578618000,
    "created_at": 1578618000,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "key_ops": [
      "decrypt",
      "verify",
    ],
    "kid": "publicKeyRSA",
    "kty": "RSA",
    "n": "n",
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "ES512",
    "allowed_from": 1578445200,
    "created_at": 1578445200,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "key_ops": [
      "verify",
    ],
    "kid": "publicKey",
    "kty": "EC",
    "n": "n",
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "ES512",
    "allowed_from": 1578272400,
    "created_at": 1578272400,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "expires_at": 1640995200,
    "key_ops": [
      "verify",
    ],
    "kid": "privateKeyExpires",
    "kty": "EC",
    "n": "n",
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "RS512",
    "allowed_from": 1578099600,
    "created_at": 1578099600,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "key_ops": [
      "decrypt",
      "verify",
    ],
    "kid": "privateKeyRSA",
    "kty": "RSA",
    "n": "n",
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "ES512",
    "allowed_from": 1577926800,
    "created_at": 1577926800,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "key_ops": [
      "verify",
    ],
    "kid": "privateKey",
    "kty": "EC",
    "n": "n",
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
]
`;
